runservice/hello-go_pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  containers:
    - name: hello-go
      image: smartmarketingreports/sandpit:km_k8shello_v1

# containerPort - the list of ports to expose from the container. The target port in the service def'n is effectively the NAT port translation table
# this is informational
