runservice/hello-go-service.yml
# a logical set of Pods and a policy by which to access them
# https://kubernetes.io/docs/concepts/services-networking/service/
# this means that when kubernetes spins up or recreates pods as things change
# the connectivity doesn't die with this.
#
kind: Service
apiVersion: v1
metadata:
  name: hello-go

spec:
  selector:
    app: hello-go
    # the next label matches that in the ingress load balancer to form the connection for "listening"
    k8s-app: traefik-ingress-lb
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      # the port one the service listens on
      port: 80
      # the targetPort is the port that the docker container listens on
      targetPort: 8100
# having a selector means the Endpoint slice is created automatically
