runservice/hello-go-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-go-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: k8ssamples.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-go
                port:
                  number: 80
